fixes for compatibility problems on macs with java 1.4.1
git-svn-id: http://svn.code.sf.net/p/sonia/source_code@47 fb298286-8e17-4df1-bf80-b634edc3145b